force-app/main/default/objects/Child_Record_Question__c/Child_Record_Question__c.object-meta.xml
<CustomObject>
    <description>This object will be utilised by the "Add Another" pattern.</description>
    <label>Child Record Question</label>
    <nameField>
        <displayFormat>CRQ-{00000000}</displayFormat>
        <label>Child Record Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Record Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>