force-app/main/default/objects/Child_Record_Question__c/fields/Application_Question__c.field-meta.xml
<CustomField>
    <fullName>Application_Question__c</fullName>
    <description>This is the question number that we will be creating the objects under.</description>
    <label>Application Question</label>
    <referenceTo>Application_Question__c</referenceTo>
    <relationshipLabel>Child Record Questions</relationshipLabel>
    <relationshipName>Child_Record_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>