force-app/main/default/objects/Child_Record_Question__c/fields/Character_Word_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Character_Word_Assistance__c</fullName>
    <label>Character / Word Assistance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>