force-app/main/default/objects/Child_Record_Question__c/fields/Do_Not_Display_Question__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Display_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Display Question</label>
    <type>Checkbox</type>
</CustomField>