force-app/main/default/objects/Child_Record_Question__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>This is the field we will be populating.</description>
    <inlineHelpText>This is the field we will be populating.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>