force-app/main/default/objects/Child_Record_Question__c/fields/Page_Number_To_Display_On__c.field-meta.xml
<CustomField>
    <fullName>Page_Number_To_Display_On__c</fullName>
    <description>This will be used to define which page number this field will show on. If blank, it will not be displayed, but may be needed</description>
    <inlineHelpText>This will be used to define which page number this field will show on, but may be needed</inlineHelpText>
    <label>Page Number To Display On</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>