force-app/main/default/objects/Child_Record_Question__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>