force-app/main/default/objects/Child_Record_Question__c/fields/Summary_Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Summary_Question_Label__c</fullName>
    <label>Summary Question Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>