force-app/main/default/objects/Child_Record_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Question__c</columns>
    <columns>Question__c</columns>
    <columns>Question_Number__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Page_Number_To_Display_On__c</columns>
    <columns>Help_Text__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>